<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CREAR">

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ce"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="0dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="3dp"
            android:text="@string/crea"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="88dp"
            android:text="@string/preguntas"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/alb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="81dp"
            android:layout_marginBottom="544dp"
            android:hint="@string/ingrese_la_cantidad_de_preguntas"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="221dp"
            android:text="@string/opciones"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/co"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="406dp"
            android:hint="@string/ingrese_la_cantidad_de_opciones"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="360dp"
            android:text="@string/tiempo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/CT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="281dp"
            android:hint="@string/ingrese_el_tiempo_por_pregunta"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="478dp"
            android:text="@string/codigo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/album_description_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="232dp"
            android:layout_marginBottom="155dp"
            android:hint="@string/ingrese_un_codigo"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="161dp"
            android:layout_marginBottom="63dp"
            android:text="@string/crear" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>