<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <?xml version="1.0" encoding="utf-8"?>


        <ImageView
            android:id="@+id/photo_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="0dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ExtraText">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="192dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="476dp"
                android:background="#FFFF"
                android:src="@drawable/ava"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:text="@string/bienvenido_profesor_x"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_marginTop="26dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="50sp"
                android:textStyle="bold|italic"
                tools:layout_editor_absoluteX="28dp"
                tools:layout_editor_absoluteY="16dp" />

            <Button
                android:id="@+id/b1"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="395dp"
                android:text="@string/crear_cuestionarios" />

            <Button
                android:id="@+id/b2"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="334dp"
                android:text="@string/mensajeria" />

            <Button
                android:id="@+id/b3"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="277dp"
                android:text="@string/secciones" />

            <Button
                android:id="@+id/b4"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="56dp"
                android:layout_marginBottom="214dp"
                android:text="@string/evaluaciones" />

            <Button
                android:id="@+id/b5"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="55dp"
                android:layout_marginBottom="155dp"
                android:text="@string/leer_o_realizar_anuncios" />

            <Button
                android:id="@+id/salir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="297dp"
                android:layout_marginBottom="27dp"
                android:text="@string/salir" />


        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>